RP-915 Improvements to Missing MP/MPF Concepts Report